--- a/mission/index.html
+++ b/mission/index.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="mission.js" defer></script>
 </head>
+
 <body>
 <div class="content">
 <header class="titles">
+
+    <select id="mode-select">
+        <option value="light">Light Mode</option>
+        <option value="dark">Dark Mode</option>
+    </select>
+
 <h1>Mission Statement</h1>
 <h2>Brigham Young University-Idaho</h2>
 <hr>
