--- a/mission/index.html
+++ b/mission/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="mission.js" defer></script>
+    <script src="/mission/mission.js" defer></script>
 </head>
 
 <body>
 <div class="content">
 <header class="titles">
 
-    <select id="mode-select">
+    <select id="mode">
         <option value="light">Light Mode</option>
         <option value="dark">Dark Mode</option>
     </select>
