--- a/mission/index.html
+++ b/mission/index.html
@@ -53,7 +53,7 @@
 </main>
 
 <footer>
-<img src="byui-logo_blue.webp" alt="BYUI logo" class="byuiLogo">
+<img src="byui-logo_blue.webp" alt="BYUI logo" class="logo">
 </footer>
 </div>
 </body>
