--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cool Pics</title>
     <link rel="stylesheet" href="coolpics.css">
     <script src="coolpics.js" defer></script>
 </head>
