fix with cool pci img path issue at modal

--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="viewer">
         <button class="close-viewer">X</button>
-        <img src="norris-full.jpeg" alt="alt description">
+        <img src="coolpics/norris-full.jpeg" alt="Clicked Picture">
     </div>
 
     <header>
