main index linked to credit card form

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <a href="coolpics/index.html">Coolpics</a>
     <a href="blog/index.html">Blog Site</a>
+    <a href="creditcard/index.html">Credit card form</a>
 </body>
 </html>
